[gd_scene load_steps=4 format=1]

[ext_resource path="res://asset scenes/object.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1, 1, 1 )

[node name="object" type="StaticBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.563383, 1.70829, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="object_mesh" type="TestCube" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.184989, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="object_trigger" type="Area" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 5.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="object_trigger"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Camera" type="Camera" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.903374, 0.251393, -0.347443, 2.98023e-08, 0.810168, 0.586198, 0.428854, -0.529556, 0.731884, -4.0804, 5.2783, 6.30345 )
projection = 0
fov = 65.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[connection signal="mouse_enter" from="." to="." method="_on_object_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_object_mouse_exit"]

[connection signal="input_event" from="object_trigger" to="." method="_on_object_trigger_input_event"]

[connection signal="mouse_enter" from="object_trigger" to="." method="_on_object_trigger_mouse_enter"]

[connection signal="mouse_exit" from="object_trigger" to="." method="_on_object_trigger_mouse_exit"]


